--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -2445,9 +2445,16 @@ I do not know when he, difficult to be secured though sought after, will favour 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इयं च तेऽन्या पुरतो विडम्बना  
-यद्-ऊढया वारणराजहार्यया ।  
-विलोक्य वृद्धोक्षमधिष्ठितं त्वया महाजनः स्मेरमुखो भविष्यति ॥ 5.70 ॥  
+यद्-ऊढया वारण-राज-हार्यया ।  
+**विलोक्य** वृद्धोक्षम् **अधिष्ठितं** त्वया  
+महा-जनः स्मेर-मुखो **भविष्यति** ॥ 5.70 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(70.) Then again this another humiliation will await thee-great men will have smiling countenances, on seeing thee, fit to be borne by a lordly elephant, striding the bull, after marriage. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2467,9 +2474,17 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-द्वयं गतं संप्रति शोचनीयतां समागमप्रार्थनया पिनाकिनः ।  
-कला च सा कान्तिमती कलावतस्त्वमस्य लोकस्य च नेत्रकौमुदी ॥ 5.71 ॥  
+द्वयं गतं संप्रति शोचनीयतां  
+समागम-प्रार्थनया पिनाकिनः ।  
+कला च सा कान्तिमती कलावतस्  
+त्वम् अस्य लोकस्य च नेत्र-कौमुदी ॥ 5.71 ॥ +++(4)+++ 
 </details>
+
+<details><summary>English</summary>
+
+(71.) By their earnest (desire) for union with the Tridentholder, two things have now become objects of commiseration: the digit of the (moon) and thyself, the moonlight of the eyes of the world. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2487,18 +2502,36 @@ I do not know when he, difficult to be secured though sought after, will favour 
 द्वयमिति । पिनाकिन ईश्वरस्य समागमप्रार्थनया प्राप्तिकामनया । क्रियमाणयेति शेषः । संप्रति द्वयं शोचनीयतां शोच्यत्वं गतम् । किं तदह-सा प्रागेव हरशिरोगता । अत्र सेति प्रसिद्धार्थत्वान्न यच्छब्दापेक्षा । तदुक्तं काव्यप्रकाशं-प्रकान्तप्रसिद्धानिभूतार्थत्वान्न यच्छब्दापेक्षा । तदुक्तं काव्यप्रकाशे-प्रकान्तप्रसिद्धानिभूतार्थविषयस्तच्छब्दो यदुपादानं नापेक्षते इति । कान्तिमती । नित्ययोगे मतुप् । कलावतश्चन्द्रस्य कला षोडशो भागश्चास्य लोकस्य नेत्रकौमुदी । नेत्रानन्दिनीत्यर्थः । त्वं च । कान्तिमतीत्वनेत्रकौमुदौत्वविशेषणयोरुभयत्राप्यन्वयः । प्रागेकैव शोच्या । संप्रति तु त्वमप्यपरेति द्वयं शोच्यमिति पिण्डितार्थः । शोच्यात्वं च निकृष्टाश्रयणादिति भावः ॥ 5.71 ॥
 </details>
 
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
+
+> 'कन्या वरयते रूपं,  
+माता वित्तं, पिता श्रुतम् ।  
+बान्धवाः कुलमिच्छन्ति,  
+मिष्टान्नमितरे जनाः ॥' 
+
+इति लोकानामाभाषणम् ।  
+तत्र किंचिदपि नास्तीत्याह-  
+</details>
+
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-'कन्या वरयते रूपं, माता वित्तं, पिता श्रुतम् । बान्धवाः कुलमिच्छन्ति, मिष्टान्नमितरे जनाः ॥' इति लोकानामाभाषणम् । तत्र किचिदपि नास्तीत्याह-  
-वपुर्विरुपाक्षमलक्ष्यजन्मता दिगम्बरत्वेन निवेदितं वसु ।  
-वरेषु यद्वालमृगाक्षि ! मृग्यते तदस्ति किं व्यस्तमपि त्रिलोचने ? ॥ 5.72 ॥  
+वपुर् विरुपाक्षम्, अ-लक्ष्य-जन्मता  
+दिग्-अम्बरत्वेन निवेदितं वसु ।  
+वरेषु यद् बालमृगाक्षि ! मृग्यते  
+तद् अस्ति किं व्यस्तम् अपि त्रिलोचने ? ॥ 5.72 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(72.) His body is (deformed) having monstrous eyes, his descent is obscure (not to be found out), and his wealth is shown by his having the quarters for a garment. O thou having eyes like those of a young gazelle, is whatever expected in a husband found in the three-eyed One, even taken singly? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-'कन्या वरयते रूपं, माता वित्तं, पिता श्रुतम् । बान्धवाः कुलमिच्छन्ति, मिष्टान्नमितरे जनाः ॥' इति लोकानामाभाषणम् । तत्र किचिदपि नास्तीत्याह-  
 वपुर्विरुपाक्षमलक्ष्यजन्मता दिगम्बरत्वेन निवेदितं वसु ।  
-वरेषु यद्वालमृगाक्षि ! मृग्यते तदस्ति किं व्यस्तमपि त्रिलोचने ? ॥ 5.72 ॥  
+वरेषु यद्बालमृगाक्षि ! मृग्यते तदस्ति किं व्यस्तमपि त्रिलोचने ? ॥ 5.72 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -2513,9 +2546,19 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निवर्तयास्मादसदीप्सितान्मनः क्व तद्विधस्त्वं क्व च पुण्यलक्षणा ?  
-अपेक्ष्यते साधुजनेन वैदिकी श्मशानशूलस्य न यूपसत्क्रिया ॥ 5.73 ॥  
+**निवर्तयास्माद्** अ-सद्-ईप्सितान् मनः  
+क्व तद्-विधस्, त्वं क्व च पुण्य-लक्षणा ?  
+**अपेक्ष्यते** साधु-जनेन वैदिकी +++(→यूप-सत्-क्रिया)+++  
+श्मशान-शूलस्य **न** यूप-सत्-क्रिया ॥ 5.73 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(73.) 
+Turn thy heart from this evil desire; what a disance is there between one of that kind, and thee with auspicious marks? A gibbet of the burial ground is not expected to be treated with the Vedic rites proper for a sacrificial post, by the good. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2533,16 +2576,27 @@ I do not know when he, difficult to be secured though sought after, will favour 
 निवर्तयेति । अस्मादसदीप्सितादनिष्टमनोरथान्मनो निवर्तय निवारय । सा पूर्वोक्ता विधा प्रकारो यस्य तथोक्तः । अमङ्गलशील इत्यर्थः । क्व । महदन्तरमित्यर्थः । पुण्यलक्षणा प्रशस्तभागयचिह्ना त्वं च क्व । अतो न तवायमर्ह इत्यर्थः । तथाहि साधुजनेन । 'साधुर्वार्धुषिके चारौ सज्जने चाभिधेयवत्' । इति विश्वः । श्मशानशूलस्य श्मशानभूमिनिखातस्य वध्याशङ्कोर्वैदिकी वेदोक्ता । यूपो नाम पशुबन्धनसाधनभूतः संस्कृतदारुविशेषस्तस्य सत्क्रिया प्रोक्षणाभ्युक्षणादिसंस्कारो यूपसत्क्रिया नापेक्ष्यते नेष्यते । यथा श्मशानशूले यूपसत्क्रिया न क्रियते तथा त्वमपि तस्मै न घटस इति तात्पर्यार्थः ॥ 5.73 ॥
 </details>
 
+### प्रत्युत्तरम्
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इति द्विजातौ प्रतिकूलवादिनि प्रवेपमानाधरलक्ष्यकोपया ।  
-विकुञ्चित भ्रुमतमाहिते तया विलोचने तिर्यगुपान्तलोहिते ॥ 5.74 ॥  
+इति द्विजातौ प्रतिकूल-**वादिनि**  
+प्रवेपमानाधर-लक्ष्य-कोपया ।  
+विकुञ्चित-भ्रूलतम् **आहिते** तया  
+विलोचने तिर्यग् उपान्त-लोहिते ॥ 5.74 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(74.) By her, whose anger could be guessed from her quivering nether lip, were cast askance upon the twiceborn, talking adversely, her eyes, red at the corners, 
+with a hown gathered on the creeper like-brows. 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 इति द्विजातौ प्रतिकूलवादिनि प्रवेपमानाधरलक्ष्यकोपया ।  
-विकुञ्चित भ्रुमतमाहिते तया विलोचने तिर्यगुपान्तलोहिते ॥ 5.74 ॥  
+विकुञ्चितभ्रूलतमाहिते तया विलोचने तिर्यगुपान्तलोहिते ॥ 5.74 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -2557,13 +2611,23 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उवाच चैनं परमार्थतो हरं न वेत्सि नूनं यत एवमात् माम् ।  
-अलोकसामन्यमचिन्त्यहेतुकं द्विषन्ति मन्दाश्चरितं महात्मनाम् ॥ 5.75 ॥  
+**उवाच** चैनं - "परमार्थतो हरं  
+**न वेत्सि** नूनं, यत एवम् आत्थ माम् ।  
+अ-लोक-सामन्यम् अ-चिन्त्य-हेतुकं  
+**द्विषन्ति** मन्दाश् **चरितं** महात्मनाम्" ॥ 5.75 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(75.) And him she thus addressed: -"Indeed thou dost not know Hara aright, since thou talkest thus to me. The dullwitted find fault with the course of life of the magnanimous, which is not in common with that of other people, and the motive of which is difficult to divine.” 
+( 37 ) 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-उवाच चैनं परमार्थतो हरं न वेत्सि नूनं यत एवमात् माम् ।  
+उवाच चैनं परमार्थतो हरं न वेत्सि नूनं यत एवमात्थ माम् ।  
 अलोकसामन्यमचिन्त्यहेतुकं द्विषन्ति मन्दाश्चरितं महात्मनाम् ॥ 5.75 ॥  
 </details>
 
@@ -2577,16 +2641,28 @@ I do not know when he, difficult to be secured though sought after, will favour 
 उवाचेति । अथैनं ब्रह्मचारिणमुवाच च । किमिति ? परमार्थतस्तत्त्वतो हरं न वेत्सि न जानासि नूनम् । कुतः । यतो मामेवमुक्तया रीत्यात्थ ब्रवीषि । 'ब्रुवः पञ्चानामादित-इति रुपसिद्धिः । अज्ञानादेवायं शिवद्वेषस्तवेत्याशयेनाह-मन्दा मृढाः 'मूढाल्पापटुनिर्भाग्या मन्दाः' इत्यमरः । लोकसामान्यमितरजनसाधारणं न भवतीत्यलोकसामान्यमचितन्त्हेतुकं दुर्बोधकारणकं महात्मनां चरितम् । द्विषन्ति हेत्वपरिज्ञानाद् दूषयन्ति । विद्वांसस्तु कोऽप्यत्र हेतुरस्तीति बहु मन्यन्त इत्यर्थः ॥ 5.75 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 संप्रति 'अमङ्गलाभ्यासरतिम्' (5/65) इत्याद्युक्तं दूषणजातम् 'विपद्' इत्यादिभिः षङ्भिः श्लोकैः परिहर्तुमारभते-  
-विपत्प्रतीकारपरेण मङ्गलं निषेव्यते भूतिसमुत्सुकेन वा ।  
-जगच्छरण्यस्य निराशिषः सतः किमेभिराशोपहतात्मवृत्तिभिः ? ॥ 5.76 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+विपत्-प्रतीकार-परेण मङ्गलं  
+**निषेव्यते** भूति-समुत्सुकेन वा ।  
+जगच्-छरण्यस्य निराशिषः सतः  
+किम् एभिर् आशोपहतात्म-वृत्तिभिः ? ॥ 5.76 ॥+++(5)+++  
+</details>
+
+<details><summary>English</summary>
+
+(76.) Auspicious things are resorted to by one, who is anxious to ward off calamities or to attain prosperity. What has he, who is the protector of the world and has nothing to wish for, to do with these, which corrupt the functions of the mind by generating desires? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-संप्रति 'अमङ्गलाभ्यासरतिम्' (5/65) इत्याद्युक्तं दूषणजातम् 'विपद्' इत्यादिभिः षङ्भिः श्लोकैः परिहर्तुमारभते-  
 विपत्प्रतीकारपरेण मङ्गलं निषेव्यते भूतिसमुत्सुकेन वा ।  
 जगच्छरण्यस्य निराशिषः सतः किमेभिराशोपहतात्मवृत्तिभिः ? ॥ 5.76 ॥  
 </details>
@@ -2603,19 +2679,27 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अकिचनः सन्प्रभवः स संपदां, त्रिलोकनाथः पितृसद्मगोचरः ।  
-स भीमरुपः शिव इत्युदीर्यते, न सन्ति याथार्थ्यविदः पिनाकिनः ॥ 5.77 ॥  
+अकिचनः सन् **प्रभवः** स संपदां,  
+त्रिलोक-नाथः पितृ-सद्म-**गोचरः** ।  
+स भीम-रूपः शिव इत्य् **उदीर्यते**,  
+**न सन्ति** याथार्थ्य-विदः पिनाकिनः ॥ 5.77 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(77.) Himself poor, he is the spring of wealth; living (lit. found) in the cremation ground (the above of the dead) he is the lord of the three worlds; of terrible form he is called S'iva (of gentle aspect). None are there who know the Trident-holder for what he is, 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 अकिचनः सन्प्रभवः स संपदां, त्रिलोकनाथः पितृसद्मगोचरः ।  
-स भीमरुपः शिव इत्युदीर्यते, न सन्ति याथार्थ्यविदः पिनाकिनः ॥ 5.77 ॥  
+स भीमरूपः शिव इत्युदीर्यते, न सन्ति याथार्थ्यविदः पिनाकिनः ॥ 5.77 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-सः अकिञ्चिनः सन् सम्पदां प्रभवः, पितृसद्मगोचरः सन् त्रिलोकनाथः भीमरुपः सन् 'शिव' इति उदीर्यते । (अतः) पिनाकिनः याथार्थ्यविदो न सन्ति ।  
+सः अकिञ्चिनः सन् सम्पदां प्रभवः, पितृसद्मगोचरः सन् त्रिलोकनाथः भीमरूपः सन् 'शिव' इति उदीर्यते । (अतः) पिनाकिनः याथार्थ्यविदो न सन्ति ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -2623,18 +2707,30 @@ I do not know when he, difficult to be secured though sought after, will favour 
 अकिंचनेति । स हरः । न विद्यते किंचन द्रव्यं यस्य सोऽकिंचनो दरिद्रः सन् । संपदां प्रभवत्यस्मादिति प्रभवः कारणम् । पितृसद्मगोचरः श्मशानाश्रयः सन् । त्रयाणां लोकानां नाथः 'तद्धितार्थे-' त्यादिनोत्तरपदसमासः । सदेवो भीमरुपो भयंसराकारः सन् । शिवः सौम्यरुप इत्युदीर्यते उच्यते । अतः पिनाकिनो हरस्य यथाभूतोऽर्थो यथार्थस्तस्य भावो याथार्थ्य तत्वं तस्य विदो न सन्ति । लोकोत्तरमहिम्नो निर्लेपस्य यथाकथञ्चिदवस्थानं न दोषायेति भावः । एतेन 'अवस्तुनिर्बन्धपरे' (5/66) इति परिहृतं वेदितव्यम् ॥ 5.77 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 देवस्य लौकिकमलौकिकं च प्रसाधनं नास्तीत्याशयेनाह-  
-विभूषणोद्भासि, पिनद्धभोगि वा गजाजिनालम्बि दुकूलधारि वा  ।  
-कपालि वा स्यादथवेन्दुशेखरं न विश्वमीर्तेरवधार्यते वपुः ॥ 5.78 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+विभूषणोद्भासि, पिनद्ध-भोगि वा  
+गजाजिनालम्बि दुकूल+++(=क्षौम)+++-धारि वा  ।  
+कपालि वा स्याद् अथवेन्दु-शेखरं  
+**न** विश्वमूर्तेर् **अवधार्यते** वपुः ॥ 5.78 ॥  
+</details>
+
+<details><summary>English</summary>
+
+(78.) The shape of one whose form is the universe can not be determined: It may be resplendent with ornaments or entwined with serpents, dressed in the elephant-hide or again in silken garments, or it may have a vessel of skull or the moon on the crest. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-देवस्य लौकिकमलौकिकं च प्रसाधनं नास्तीत्याशयेनाह-  
 विभूषणोद्भासि, पिनद्धभोगि वा गजाजिनालम्बि दुकूलधारि वा  ।  
-कपालि वा स्यादथवेन्दुशेखरं न विश्वमीर्तेरवधार्यते वपुः ॥ 5.78 ॥  
+कपालि वा स्यादथवेन्दुशेखरं न विश्वमूर्तेरवधार्यते वपुः ॥ 5.78 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -2647,16 +2743,28 @@ I do not know when he, difficult to be secured though sought after, will favour 
 विभूषणेति । विश्वं मूर्तिर्यस्येति विश्वमूर्तेरष्टमूर्तेः शिवस्य वपुः शरीरं भूषणैरुद्भासत इति भूषणोद्भासि स्यात् । पिनद्धभोग्यामुक्तभुजङ्गमं वा स्यात् । पिनद्धेति नह्यतेरपिपूर्वात्कर्मणि क्तः । 'वष्टि भागुरिरल्लोपमवाप्योरुपसर्गयोः' इत्यकारलोपः । गजाजिनालम्बि स्यात् अथवा दुकूलधारि स्यात् । कपालमस्यास्तीति कपालि ब्रह्मशिरःकपालशेखरं वा स्यात् इन्दुशेकरं वा स्यात्म । नावधार्यते न निर्धार्यते । सर्वं संभवतीत्यर्थः । एतेन 'त्वमेव तावत्' (5/67) इति श्लोकोक्तं प्रत्युक्तमिति ज्ञेयम् ॥ 5.78 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 अयुक्तरूपं किमतः परं वद (5/69) इति श्लोकोक्तं प्रत्याह-  
-तदङ्ग संसर्गमवाप्य कल्पते ध्रुवं चिताभस्मरजो विशुद्धये ।  
-तथाहि नृत्याभिनयक्रियाच्युतं विलिप्यते मौलिभिरम्बरौकसाम् ॥ 5.79 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+तद्-अङ्ग-संसर्गम् अवाप्य **कल्पते**  
+ध्रुवं चिता-भस्म-रजो **विशुद्धये** ।  
+तथा हि नृत्याभिनय-क्रियाच्युतं  
+**विलिप्यते** मौलिभिर् अम्बरौकसाम् ॥ 5.79 ॥ +++(5)+++ 
+</details>
+
+<details><summary>English</summary>
+
+(79.) Certainly the particles of the ashes of the funeral pyre even become sanctifying by having obtained a touch of his body; and hence are held on the head by the dwellers of heaven when dropped in the act of exhibiting the gestures of dancing. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-अयुक्तरूपं किमतः परं वद (5/69) इति श्लोकोक्तं प्रत्याह-  
 तदङ्ग संसर्गमवाप्य कल्पते ध्रुवं चिताभस्मरजो विशुद्धये ।  
 तथाहि नृत्याभिनयक्रियाच्युतं विलिप्यते मौलिभिरम्बरौकसाम् ॥ 5.79 ॥  
 </details>
@@ -2671,16 +2779,28 @@ I do not know when he, difficult to be secured though sought after, will favour 
 तदिति । शिवस्याङ्गम् तस्य संसर्गमवाप्यासाद्य चिताभस्मैव रचो विशुद्धये कल्पते । अलं पर्याप्नोतीत्यर्थः । अलमर्थयोगात् 'नमः- स्वस्तिस्वाहे-' त्यादिना चतुर्थी । ध्रुवं शोधकत्वम् । प्रमाणसिद्धमित्यर्थः । प्रमाणमेवाह--तथाहि । प्रसिद्धमेवेत्यर्थः । वृत्ये ताण्डवे योऽभिनयोऽर्थव्यञ्जकचेष्टाविशेषः स एव क्रिया तया निमित्तेन च्युतं पतितम् । चिताभस्मरज इति शेषः । अम्बरौकसां देवानां मौलिभिर्विलिप्यते ध्रियते । अशुद्धं चेत्कथमिन्द्रादिभिर्ध्रियेतेत्यर्थापत्तिरनुमानं वा प्रमाणमित्यर्थः ॥ 5.79 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 यदुक्तम् 'दिगम्बरत्वेन निवेदितं वसु (5/72) 'इयं च तेऽन्या पुरतो विडम्बना' (5/70) इत्यादि च तत्रोत्तरमाह-  
-असंपदस्तस्य वृषेण गच्छतः प्रभिन्नदिग्वारणवाहनो वृषा ।  
-करोति पादावुपगम्य मौलिना विनिद्रमन्दाररजोरुणाङ्गुली ॥ 5.80 ॥  
 </details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अ-संपदस् तस्य वृषेण गच्छतः  
++++(मद-)+++प्रभिन्न-+++(पूर्व-)+++दिग्-वारण-वाहनो वृषा+++(=इन्द्रः)+++ ।  
+**करोति** पादाव् **उपगम्य** मौलिना  
+विनिद्र-मन्दार-रजोऽरुणाङ्गुली ॥ 5.80 ॥  
+</details>
+
+<details><summary>English</summary>
+
+(80.) Indra, having for his vehicle the rutting elephant of the (eastern) quarter, touches, with his crest, the feet of that poor God, who goes about on the bull and makes their toes red with the pollen-dust of the full-blown flowers of the heavenly trees. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-यदुक्तम् 'दिगम्बरत्वेन निवेदितं वसु (5/72) 'इयं च तेऽन्या पुरतो विडम्बना' (5/70) इत्यादि च तत्रोत्तरमाह-  
 असंपदस्तस्य वृषेण गच्छतः प्रभिन्नदिग्वारणवाहनो वृषा ।  
 करोति पादावुपगम्य मौलिना विनिद्रमन्दाररजोरुणाङ्गुली ॥ 5.80 ॥  
 </details>
@@ -2695,16 +2815,29 @@ I do not know when he, difficult to be secured though sought after, will favour 
 असंपद इति । प्रभिन्नो मदस्त्रावी दिग्वारणो दिग्गजो वाहनं यस्य सः । ऐरावतेनोढ इत्यर्थः । वृषा देवेन्द्रोऽसंपदो दरिद्रस्य वृषेण गच्छतो वृषभारुढस्य तस्येश्वरस्य पादौ मौलिना मुकुटेनोपगम्य प्रणम्येत्यर्थः । विनिद्राणां विकसितानां मन्दाराणां कल्पतरुकुसुमानां रजोभिः परागैररुणा अङ्गुलयो ययोस्तै तथोक्तौ करोति । दिग्गजारोहिणामिन्द्रादीनामपि वन्द्यस्येन्दुमौलेः किं संपदा, वृषारोहणे वा को दोष इत्यर्थः ॥ 5.70 ॥
 </details>
 
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
+
+यदुक्तम् 'अलक्ष्यजन्मता' (5/72) इति तत्रोत्तरमाह-  
+</details>
+
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यदिक्तम् 'अलक्ष्यजन्मता' (5/72) इति तत्रोत्तरमाह-  
-विवक्षता दोषमपि च्युतात्मना त्वयैकमीशं प्रति साधु भाषितम् ।  
-यमामनन्त्यात्मभुवोऽपि कारणं कथं स लक्ष्यप्रभवो भविष्यति ? ॥ 5.81 ॥  
+**विवक्षता** दोषम् अपि च्युतात्मना  
+त्वयैकम् ईशं प्रति साधु **भाषितम्** ।  
+यम् **आमनन्त्य्** आत्म-भुवोऽपि कारणं  
+कथं स लक्ष्य-प्रभवो **भविष्यति** ? ॥ 5.81 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(81.) Thou, of depraved soul, although wishing to speak the faults of the Lord, hast said one good thing about him. How can he, who is considered the parent of even the selfexistent Brahmá, have his origin known? 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-यदिक्तम् 'अलक्ष्यजन्मता' (5/72) इति तत्रोत्तरमाह-  
+यदुक्तम् 'अलक्ष्यजन्मता' (5/72) इति तत्रोत्तरमाह-  
 विवक्षता दोषमपि च्युतात्मना त्वयैकमीशं प्रति साधु भाषितम् ।  
 यमामनन्त्यात्मभुवोऽपि कारणं कथं स लक्ष्यप्रभवो भविष्यति ? ॥ 5.81 ॥  
 </details>
@@ -2721,9 +2854,17 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अलं विवादेन यथा श्रुतस्त्वया तथाविधस्तावदशेषमस्तु सः ।  
-ममात्र भावैकरसं मनः स्थितं, न कामवृत्तिर्वचनीयमीक्षते ॥ 5.82 ॥  
+अलं विवादेन यथा श्रुतस् त्वया  
+तथा-विधस् तावद् अ-शेषम् अस्तु सः ।  
+ममात्र भावैक-रसं **मनः स्थितं**,  
+**न** काम-वृत्तिर् वचनीयम् **ईक्षते** ॥ 5.82 ॥  +++(4)+++
 </details>
+
+<details><summary>English</summary>
+
+(82.) Though of disputing let him be, without any reservation, what you have heard him to be, My heart, however, is set on him, pervaded by the one sentimet of love; one, who wants to act as one likes, does not regard (care for) criticism (Ill-talk ). 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -2741,21 +2882,33 @@ I do not know when he, difficult to be secured though sought after, will favour 
 -अलमिति । अथवा विवादेन कलहेनालम् । त्वया यथा येन प्रकारेण स ईश्वरः श्रुतोऽशेषं कर्त्स्न्येन तथाविधस्तावत्प्रकार एवास्तु । मम मनस्त्वत्रेश्वरे भावः श्रृङ्गार एकोऽद्वितीयो रस आस्वाद्यो यस्य तत्तथा स्थितम् । तथाहि । कामवृत्तिः स्वेच्छाव्यवहारी वचनीयमस्थानसङ्गापवादं नेक्षते न विचारयति । न हि स्वेच्छासंचारिणो लोकापवादाद् बिभ्यतीति भावः ॥ 5.82 ॥
 </details>
 
+## स्वरूप-प्रकटनम्
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निवार्यतामालि ! किमप्ययं बटुः पुनर्विवक्षुः स्फुरितोत्तराधरः ।  
-न केवलं यो महतोऽपभाषते श्रृणोति तस्मादपि यः स पापभाक् ॥ 5.83 ॥  
+**निवार्यताम्** आलि ! किम् अप्य् अयं वटुः  
+पुनर् **विवक्षुः** स्फुरितोत्तराधरः ।  
+न केवलं यो महतो **ऽपभाषते**  
+**श्रृणोति** तस्माद् अपि यः स **पाप-भाक्** ॥ 5.83 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(83.) O friend, stop this boy who seems desirous of saying something as his upper lip quivers. Not only he, who talks ill of the mighty, but also he who listens to him is a sinner. 
+K. T. 4 
+(38) 
+
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-निवार्यतामालि ! किमप्ययं बटुः पुनर्विवक्षुः स्फुरितोत्तराधरः ।  
+निवार्यतामालि ! किमप्ययं वटुः पुनर्विवक्षुः स्फुरितोत्तराधरः ।  
 न केवलं यो महतोऽपभाषते श्रृणोति तस्मादपि यः स पापभाक् ॥ 5.83 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-हे आलि ! स्फुरितौत्तराऽधरः अयं वदुः पुनः किमपि विवक्षुः निवार्यताम् । यो महतः अपभाषते न केवलं स पापभाक् भवति, यः तस्मात् श्रृणोति शोऽपि पापभाग् भवति ।  
+हे आलि ! स्फुरितौत्तराऽधरः अयं वटुः पुनः किमपि विवक्षुः निवार्यताम् । यो महतः अपभाषते न केवलं स पापभाक् भवति, यः तस्मात् श्रृणोति शोऽपि पापभाग् भवति ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -2763,23 +2916,34 @@ I do not know when he, difficult to be secured though sought after, will favour 
 निवार्यतामिति । हे आलि सखि ! 'आलिः सखी वयस्या च' इत्यमरः । स्फुरितोत्तराधरः स्फुरणभूयिष्ठोऽयं बटुर्माणवकः पुनः किमपि विवक्षुर्वक्तुमिच्छुः । ब्रवः सन्नन्तादुप्रत्ययः । निवार्यताम् । तर्हि वक्तुमेव कथं न ददासीत्याह-तथाहि । यो महतः पूज्यानपभाषतेऽपवदति न केवलं स पापभाग्भवति । किंतु तस्मादपभाषमाणात्पुरुषाद्यः श्रृणोति सोऽपि पापभाक् । भवतीति । शेषः । अत्र स्मृतिः-'गुरोः प्राप्तः परीवादो न श्रीतव्यः कथंचन । कर्णौ तत्र पिधातव्यौ गन्तव्यं वा ततोऽन्यतः ।' इति ॥ 5.83 ॥
 </details>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्) - प्रस्तावः</summary>
 
 संप्रति गन्तव्यपक्षमाश्रयते-  
-इतो गमिष्याम्यथवेति वादिनी चचाल बाला स्तनभिन्नवल्कला ।  
-स्वरुपमास्थाय च तां कृतस्मितः समाललम्बे वृषराजकेतनः ॥ 5.84 ॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इतो गमिष्याम्य् अथवेति **वादिनी**  
+**चचाल** बाला स्तन-भिन्न-वल्कला ।  
+स्व-रुपम् आस्थाय च तां कृत-स्मितः  
+**समाललम्बे** वृष-राज-केतनः ॥ 5.84 ॥  
+</details>
+
+<details><summary>English</summary>
+
+(84.) Or rather I will bence; so saying the malden, with the bark garment slipping from her bosom, started and the bull-emblemed God, with a smile, held her having discovered his self. 
 </details>
 
 <details><summary>मूलम्</summary>
 
-संप्रति गन्तव्यपक्षमाश्रयते-  
 इतो गमिष्याम्यथवेति वादिनी चचाल बाला स्तनभिन्नवल्कला ।  
 स्वरुपमास्थाय च तां कृतस्मितः समाललम्बे वृषराजकेतनः ॥ 5.84 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-'अथवा इतो गमिष्यामि' इति वादिनी स्तनभिन्नवल्कला बाला चचाल । वृषराजकेतनः स्वरुपम् आस्थाय कृतस्मितः सन् तां समाललम्बे ।  
+'अथवा इतो गमिष्यामि' इति वादिनी स्तनभिन्नवल्कला बाला चचाल । वृषराजकेतनः स्वरूपम् आस्थाय कृतस्मितः सन् तां समाललम्बे ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -2789,13 +2953,21 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तं वीक्ष्य वेपथुमती सरसाङ्गयष्टिर्निक्षेपणाय पदमुदृधृतमुद्वहन्ती ।  
-मार्गाचलव्यतिकराकुलितेव सिन्धुः शैलाधिराजतनया न ययौ न तस्थौ ॥ 5.85 ॥  
+तं **वीक्ष्य** वेपथुमती सरसाङ्ग-यष्टिर्  
+निक्षेपणाय पदम् **उद्धृतम् उद्वहन्ती** ।  
+मार्गाचल-व्यतिकराकुलितेव सिन्धुः  
+शैलाधिराज-तनया **न ययौ न तस्थौ** ॥ 5.85 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(85.) On seeing him, all a-trembling and her body covered with perspiration, the daughter of the Mountain-lord, having one foot raised to tread, was uncertain whether to go or to stay, like a river, hampered by the impediment of a mountain in the path. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
-तं वीक्ष्य वेपथुमती सरसाङ्गयष्टिर्निक्षेपणाय पदमुदृधृतमुद्वहन्ती ।  
+तं वीक्ष्य वेपथुमती सरसाङ्गयष्टिर्निक्षेपणाय पदमुद्धृतमुद्वहन्ती ।  
 मार्गाचलव्यतिकराकुलितेव सिन्धुः शैलाधिराजतनया न ययौ न तस्थौ ॥ 5.85 ॥  
 </details>
 
@@ -2811,9 +2983,9 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अद्य प्रभृत्यवनताङ्गि ! तवास्मि दासः  
-क्रीतस्तपोभिरिति वादिनि चन्द्रमौलौ ।  
-अह्नाय सा नियमजं क्लममुत्ससर्ज  
+"अद्य प्रभृत्यवनताङ्गि ! तवास्मि दासः  
+क्रीतस् तपोभिर्" इति **वादिनि** चन्द्र-मौलौ ।  
+अह्नाय सा नियम-जं क्लमम् उत्ससर्ज  
 क्लेशः फलेन हि पुनर्नवतां विधत्ते ॥ 5.86 ॥  
 </details>
 
@@ -2821,9 +2993,15 @@ I do not know when he, difficult to be secured though sought after, will favour 
 
 अद्य प्रभृत्यवनताङ्गि ! तवास्मि दासः  
 क्रीतस्तपोभिरिति वादिनि चन्द्रमौलौ ।  
-अह्नाय सा नियमजं क्लममुत्ससर्ज  
-क्लेशः फलेन हि पुनर्नवतां विधत्ते ॥ 5.86 ॥  
+अह्नाय+++(=सद्यः)+++ सा नियमजं क्लमम् **उत्ससर्ज**  
+क्लेशः फलेन हि पुनर् नवतां **विधत्ते** ॥ 5.86 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(86.) O thou of stooping limbs, henceforth I am thy slave bought by thy austerities"-as the Moon-crested God said these words, she forgot all her exhaustion caused by the austertles at once: fatigue gives fresh vigour again by the fruition (the achievement of the desired object ). 
+</details>
+
 
 <details><summary>अन्वयः</summary>
 
