--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -3,15 +3,21 @@ title = "०६"
 
 +++
 
-.  
-
 षष्ठः सर्गः  
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथ विश्वात्मने गौरी संदिदेश मिथः सखीम् ।  
-दाता मे भूभृतां नाथः प्रमाणीक्रियतामिति ॥ 6.1 ॥  
+अथ विश्वात्मने गौरी  
+**संदिदेश** मिथः सखीम् ।  
+**दाता** मे भूभृतां नाथः  
+**प्रमाणी-क्रियताम्** इति ॥ 6.1 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(1.) Thereafter Gauri instructed her companion when alone (with her) to say to S'iva (lit. the soul of the universe)-the lord of mountains ( Himalaya) is my giver (in marriage): let him be recognised as an authority (i. e. he should be applied to for my hand ). 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
@@ -31,14 +37,22 @@ title = "०६"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तया व्याहृतसंदेशा सा बभौ निभृता प्रिये ।  
-चूतयष्टिरिवाभायाशे मधौ परभृतोमन्मुखी ॥ 6.2 ॥  
+तया व्याहृत-संदेशा  
+सा **बभौ निभृता** प्रिये ।  
+चूत-यष्टिर् इवाभ्याशे  
+मधौ पर-भृतोन्मुखी ॥ 6.2 ॥  
 </details>
+
+<details><summary>English</summary>
+
+(2.) She, who had communicated her message through her friend, and who remained relying on (or, firmly devoted to) her beloved, shone, when near (him), like a young mango tree speaking through the cuckoos, and steadily awaiting the spring when near at hand. 
+</details>
+
 
 <details><summary>मूलम्</summary>
 
 तया व्याहृतसंदेशा सा बभौ निभृता प्रिये ।  
-चूतयष्टिरिवाभायाशे मधौ परभृतोमन्मुखी ॥ 6.2 ॥  
+चूतयष्टिरिवाभ्याशे मधौ परभृतोमन्मुखी ॥ 6.2 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -53,9 +67,14 @@ title = "०६"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स तथेति प्रतिज्ञाय विसृज्य कथमप्युमाम् ।  
-ऋषीञ्ज्योतिर्मयान्सप्त सस्मार स्मरशासनः ॥ 6.3 ॥  
+स तथेति **प्रतिज्ञाय**  
+**विसृज्य** कथम् अप्य् उमाम् ।  
+ऋषीञ् ज्योतिर् मयान् सप्त  
+**सस्मार** स्मरशासनः ॥ 6.3 ॥  
 </details>
+
+ए
+
 
 <details><summary>मूलम्</summary>
 
@@ -765,7 +784,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्मिन्निति । संयमिनां योगिनामाद्ये तस्मिन्नीश्वरे परिणयोन्मुखे विवाहोत्सुके जाते सति प्रजापतेरिमे प्राजापत्याः । ब्रह्मपुत्रा इत्यर्थः । तपस्विनो मुनयः परिग्रहैः पत्नीभिर्व्रीडाम् । गार्हस्थ्यनिर्मितामित्यर्थः । 'पत्नीपरिजनादानमूलशापाः परिग्रहाः' इत्यमरः । जहुस्तत्यजुः । जहातेर्लिटि रुपम् । न हि समानगुणदोषेषु व्रीडागमोऽस्तीति भावः ॥ 6.34 ॥
+तस्मिन्निति । संयमिनां योगिनामाद्ये तस्मिन्नीश्वरे परिणयोन्मुखे विवाहोत्सुके जाते सति प्रजापतेरिमे प्राजापत्याः । ब्रह्मपुत्रा इत्यर्थः । तपस्विनो मुनयः परिग्रहैः पत्नीभिर्व्रीडाम् । गार्हस्थ्यनिर्मितामित्यर्थः । 'पत्नीपरिजनादानमूलशापाः परिग्रहाः' इत्यमरः । जहुस्तत्यजुः । जहातेर्लिटि रूपम् । न हि समानगुणदोषेषु व्रीडागमोऽस्तीति भावः ॥ 6.34 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
