--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
@@ -141,7 +141,7 @@ title = "०९"
 
 <details><summary>अन्वयः</summary>
 
-ततो हुताशः त्रसन् स्वरुपम् आस्थाय अथ वलत्कम्पकृताऽञ्जलिः, (तथा) नितरां प्रवेपमानः (सन्) स्मराऽरिं व्यक्तम् इदं वचः अध्युवाच ।  
+ततो हुताशः त्रसन् स्वरूपम् आस्थाय अथ वलत्कम्पकृताऽञ्जलिः, (तथा) नितरां प्रवेपमानः (सन्) स्मराऽरिं व्यक्तम् इदं वचः अध्युवाच ।  
 </details>
 
 <details><summary>सीतारामः</summary>
@@ -1371,7 +1371,7 @@ title = "०९"
 
 <details><summary>अन्वयः</summary>
 
-'हे सुरनायक ! अहं पारावतं वपुः प्राप्य अनतिक्रमणीयात् ते शासनात् अभिगौरि रतासक्तं महेश्वरं जगाम । (अथ) अतिसाध्वसात् वेपमानः अहं कालस्य इव स्मरारातेः स्वं रुपम् आसदम्' ।  
+'हे सुरनायक ! अहं पारावतं वपुः प्राप्य अनतिक्रमणीयात् ते शासनात् अभिगौरि रतासक्तं महेश्वरं जगाम । (अथ) अतिसाध्वसात् वेपमानः अहं कालस्य इव स्मरारातेः स्वं रूपम् आसदम्' ।  
 </details>
 
 <details><summary>सीतारामः</summary>
