--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/16.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/16.md
@@ -1201,7 +1201,7 @@ title = "१६"
 
 <details><summary>सीतारामः</summary>
 
-व्योम्न इति । व्योम्न आकाशस्य तलं स्वरुपम् । 'तलं स्वरुपाथरयोः खड्गमुष्टिचपेटयोः' इति विश्वः । तथा ककुभां दिशां मुखान्यग्राणि च पिदधतामाच्छदयताम् । 'पिघानाच्छादनानि च' इत्यमरः । तथा अविरतैर्निरन्तरभवद्भिर्गर्जारवैर्गर्जनाधोषैः कृत्वा मनांसि तुदतां व्यथयतामम्भोभृतां जलधराणां समूहैः कर्तृभिः । अनणीयसीभिरणीयस्योऽतिलध्व्यो न भवन्ति तथोक्ताभिः । महतीभिरित्यर्थः । धारावलीभिः संपातपंक्तभिः कृत्वाऽतितरां ववृषे वृष्टम् । भावे लिट् ॥ 17.44 ॥
+व्योम्न इति । व्योम्न आकाशस्य तलं स्वरूपम् । 'तलं स्वरुपाथरयोः खड्गमुष्टिचपेटयोः' इति विश्वः । तथा ककुभां दिशां मुखान्यग्राणि च पिदधतामाच्छदयताम् । 'पिघानाच्छादनानि च' इत्यमरः । तथा अविरतैर्निरन्तरभवद्भिर्गर्जारवैर्गर्जनाधोषैः कृत्वा मनांसि तुदतां व्यथयतामम्भोभृतां जलधराणां समूहैः कर्तृभिः । अनणीयसीभिरणीयस्योऽतिलध्व्यो न भवन्ति तथोक्ताभिः । महतीभिरित्यर्थः । धारावलीभिः संपातपंक्तभिः कृत्वाऽतितरां ववृषे वृष्टम् । भावे लिट् ॥ 17.44 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
