--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -73,7 +73,13 @@ title = "०६"
 **सस्मार** स्मरशासनः ॥ 6.3 ॥  
 </details>
 
-ए
+<details><summary>English</summary>
+
+(3.) 
+Having promised, 'It will be so' and sent away Umá with great difficulty, he, the chastiser of Smara, thought of (mentally called ) the seven luminous sages. 
+
+</details>
+
 
 
 <details><summary>मूलम्</summary>
